<resources>
    <string name="app_name" translatable="false">KyberSwap</string>
    <string name="message_loading">Loading…</string>
    <string name="content_description_done">Done</string>
    <string name="ok">OK</string>
    <string name="promo_code">Promo Code</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="terms_and_conditions">By using KyberSwap, you agree to\nthe Terms &amp; Conditions</string>
    <string name="landing_1_title">Secure &amp; Compatible</string>
    <string name="landing_2_title">Instant Swap with KyberSwap</string>
    <string name="landing_3_title">Profile</string>
    <string name="landing_1_content">Designed with highest security standard.\n Easily import &amp; export accounts from other\n wallet apps.</string>
    <string name="landing_2_content">Swap between arbitrary token pair.\nNo deposit needed.</string>
    <string name="landing_3_content">Easy to manage your profile and unlock other features. \nStraight from the app.</string>
    <string name="landing_limit_order_description">Swap at your target price, fully control of your funds, low fees, seamless UX</string>
    <string name="company_name">Kyber</string>
    <string name="title_confirmation">Confirm</string>
    <string name="title_wrong_backup">Wrong Backup</string>
    <string name="message_close_app_confirmation">This creates a new Ethereum wallet for you to receive and transfer tokens.</string>
    <string name="message_wrong_backup">Your backup words are incorrect.\n Please try again.</string>
    <string name="message_wrong_backup_again">You entered the wrong backup words for another time. Want to backup again?</string>
    <string name="confirm">Confirm</string>
    <string name="try_again">Try again</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="backup_wallet_description_1">We will give you a list of 12 random words. Please&#160;</string>
    <string name="backup_wallet_description_2">write down on paper</string>
    <string name="backup_wallet_description_3">and keep safe.\n\n</string>
    <string name="backup_wallet_description_4">This paper is&#160;</string>
    <string name="backup_wallet_description_5">the only way</string>
    <string name="backup_wallet_description_6">to restore your Kyber Wallet if you lose your phone or forget your password.</string>
    <string name="backup_wallet_description_title">Paper Only</string>
    <string name="description_words_from_1_4">Write down the words from 1 – 4:</string>
    <string name="backup_wallet_title">Backup your Wallet</string>
    <string name="test_wallet_title">Test your Backup</string>
    <string name="import_wallet_title">Import Wallet</string>
    <string name="backup_wallet_instruction">Write down the words from %d - %d:</string>
    <string name="verify">Continue</string>
    <string name="word_2">Word #2</string>
    <string name="word_6">Word #6</string>
    <string name="kyberswap">KyberSwap</string>
    <string name="backup_message">We will give you a list of 12 random words. Please write down on paper and keep safe. This paper is the only way to restore your Kyber Wallet if you lose your phone or forget your password.</string>
    <string name="bold_font_path" translatable="false">fonts/Roboto-Bold.ttf</string>
    <string name="normal_font_path" translatable="false">fonts/Roboto-Medium.ttf</string>
    <string name="semi_bold_font_path" translatable="false">fonts/Roboto-Bold.ttf</string>
    <string name="semi_bold_italic_font_path" translatable="false">fonts/Roboto-BoldItalic.ttf</string>
    <string name="verify_word_description">To make sure you have written down all of your backup words. Please enter the following:</string>
    <string name="backup_json">JSON</string>
    <string name="backup_private_key">Private Key</string>
    <string name="backup_seed">Seeds</string>
    <string name="enter_password_to_decrypt">Enter Password to Decrypt</string>
    <string name="import_your_json_file">Import your JSON file</string>
    <string name="import_wallet_success">You have successfully imported a wallet</string>
    <string name="name_of_your_wallet">Name of your wallet</string>
    <string name="recover_with_seeds">Recover with seeds/mnemonic</string>
    <string name="enter_private_key">Enter or scan private key</string>
    <string name="enter_seeds">Enter your seeds/mnemonic</string>
    <string name="permission_required">The permission is required to perform this action</string>
    <string name="something_wrong">Something went wrong, please try again later</string>
    <string name="your_private_key">Your Private Key</string>
    <string name="text_counter">Word count: %d</string>
    <string name="message_cancelled">Cancelled</string>
    <string name="balance">Balance</string>
    <string name="token_balance">%s Balance</string>
    <string name="kyber_list">Kyber Listed</string>
    <string name="other">Others</string>
    <string name="favourite">Favourite</string>
    <string name="name">Name</string>
    <string name="limit_order">Limit Order</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="transactions">Transactions</string>
    <string name="my_wallet">My Wallet(s)</string>
    <string name="default_balance">0</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="buy_token">Buy %s</string>
    <string name="sell_token">Sell %s</string>
    <string name="unit_usd">USD</string>
    <string name="unit_eth">ETH</string>
    <string name="your_balance_is_empty">Your balance is empty</string>
    <string name="receive_token">Receive Token</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="swap_fast">20</string>
    <string name="swap_regular">10</string>
    <string name="swap_slow">1</string>
    <string name="search">Search</string>
    <string name="wrong_backup">Wrong Backup</string>
    <string name="backup_again">Backup again</string>
    <string name="address_copy">Address copied</string>
    <string name="create_wallet_success">You have created successfully a new wallet</string>
    <string name="default_wallet_name">Untitled</string>
    <string name="default_kyber_code_wallet_name">Promo Code wallet</string>
    <string name="token">Token</string>
    <string name="default_swap_amount">0.000</string>
    <string name="advanced_optional">Advanced (optional)</string>
    <string name="rate">Rate</string>
    <string name="default_source_amount">0.001</string>
    <string name="percentage_format" formatted="false" translatable="false">"%.2f"</string>
    <string name="percentage_format_with_percent" formatted="false" translatable="false">"%s%%"</string>
    <string name="dest_balance_usd_format" formatted="false" translatable="false">"≈ %s USD"</string>
    <string name="default_dest_balance_usd">≈ 0.0 USD</string>
    <string name="gas_fee_title">GAS fee</string>
    <string name="gas_super_fast">%s SUPER FAST\n~ %s ETH</string>
    <string name="gas_fast">%s FAST\n~ %s ETH</string>
    <string name="gas_regular">%s REGULAR\n~ %s ETH</string>
    <string name="gas_slow">%s SLOW\n~ %s ETH</string>
    <string name="swap_rate_condition">Still proceed if %s-%s rate goes down by:</string>
    <string name="three_percentage">3%</string>
    <string name="percentage">%</string>
    <string name="custom_value">Custom:</string>
    <string name="rate_revert_notification">Transaction will be reverted if rate of %s-%s is lower than %s (Current rate %s)</string>
    <string name="swap_continue">Continue</string>
    <string name="swap_rate_notification">There is a %s%% difference between the estimated price for your swap amount and the reference price.\nNote: Estimated price depends on your swap amount. Reference price is from Chainlink, Band protocol and Kyber Network.</string>
    <string name="tab_day">24H</string>
    <string name="tab_week">7 Days</string>
    <string name="tab_month">Month</string>
    <string name="tab_year">Year</string>
    <string name="tab_all">All </string>
    <string name="min_acceptable_rate">Min Acceptable Rate</string>
    <string name="cancel">Cancel</string>
    <string name="swap_to">To:</string>
    <string name="gas_fee_eth">Transaction fee (ETH)</string>
    <string name="swap_gas_fee_eth">Transaction fee (Gwei)</string>
    <string name="marker_time">Time: %s</string>
    <string name="maker_price">Price: %s</string>
    <string name="change_24h">24h%</string>
    <string name="recipient_address">Recipient address</string>
    <string name="recent_contact">Recent Contact</string>
    <string name="more">more</string>
    <string name="send">Transfer</string>
    <string name="add_contact">Add Contact</string>
    <string name="manage_wallet">Manage Wallet</string>
    <string name="manage_alert">Manage Alert</string>
    <string name="alert_method">Alert Method</string>
    <string name="setting_contact">Contact</string>
    <string name="setting_support">Support</string>
    <string name="change_pin">Change PIN</string>
    <string name="setting_about">Get Started</string>
    <string name="setting_community">Community</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rate_app">Rate our App</string>
    <string name="contact_address">Address</string>
    <string name="add_contacts">Add Contact</string>
    <string name="contacts">Contacts</string>
    <string name="contact_save">Save</string>
    <string name="provide_receive_address">Please enter a valid address to transfer</string>
    <string name="amount_to_send">Amount to transfer</string>
    <string name="specify_amount">Please enter an amount to continue</string>
    <string name="swap_amount_small">Amount too small to perform swap, minimum equivalent to 0.001 ETH</string>
    <string name="title_amount_too_big">Amount too big</string>
    <string name="exceed_balance">Balance is not enough to make the transaction.</string>
    <string name="specify_contact_address">Please enter a valid address to transfer</string>
    <string name="invalid_contact_address_title">Invalid Address</string>
    <string name="invalid_contact_address">Please enter a valid address to transfer</string>
    <string name="not_in_contact">Not in contact</string>
    <string name="chart_no_token_data">There is no data for this token</string>
    <string name="chart_updating_data">Updating data…</string>
    <string name="tab_pending">Pending</string>
    <string name="tab_mined">Completed</string>
    <string name="txhash">TxHash</string>
    <string name="transaction_view_on">View on</string>
    <string name="transaction_fee">Fee</string>
    <string name="transaction_to">To</string>
    <string name="transaction_filter">Filter</string>
    <string name="filter_time">Time</string>
    <string name="filter_from">From</string>
    <string name="filter_to">To</string>
    <string name="filter_transaction_type">Transaction Type</string>
    <string name="filter_send">Transfer</string>
    <string name="filter_receive">Receive</string>
    <string name="filter_swap">Swap</string>
    <string name="filter_token">Token</string>
    <string name="filter_see_more">see more</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_apply">Apply</string>
    <string name="wallet_edit">Edit</string>
    <string name="wallet_delete">Delete</string>
    <string name="switch_wallet">Switch Wallet</string>
    <string name="backup_keystore">Backup Keystore</string>
    <string name="wallet_backup_private_key">Backup Private Key</string>
    <string name="wallet_copy_address">Copy Address</string>
    <string name="backup_mnemonic">Backup Mnemonic</string>
    <string name="open_qr_code">Open QR Code</string>
    <string name="back">Back</string>
</resources>