<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSwitchWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="45dp"
            android:text="@string/switch_wallet"
            android:textAppearance="@style/TextAppearance.Roboto.SemiBold"
            android:textColor="#2e3957"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvEditWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="45dp"
            android:text="@string/wallet_edit"
            android:textAppearance="@style/TextAppearance.Roboto.SemiBold"
            android:textColor="#2e3957"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvDeleteWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="45dp"
            android:text="@string/wallet_delete"
            android:textAppearance="@style/TextAppearance.Roboto.SemiBold"
            android:textColor="#f96363"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="45dp"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.Roboto.SemiBold"
            android:textColor="#2e3957"
            android:textSize="14sp" />

    </LinearLayout>
</layout>
