<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvOpenQRCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="45dp"
            android:text="@string/open_qr_code"
            android:textAllCaps="true"
            android:textColor="#2e3957"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="45dp"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textColor="#2e3957"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="45dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="#2e3957"
            android:textSize="14sp" />

    </LinearLayout>
</layout>
