<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/rounded_corner_dialog_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:letterSpacing="0.07"
                android:text="@string/title_wrong_backup"
                android:textColor="#141927"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center_horizontal"
                android:letterSpacing="0.07"
                android:text="@string/message_wrong_backup"
                android:textColor="#141927"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/default_button"
                android:gravity="center"
                android:minWidth="234dp"
                android:minHeight="45dp"
                android:text="@string/try_again"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>
    </FrameLayout>
</layout>
